# slothjson

./: LICENSE  Makefile  README.md  README_ZH.md  makedoc.py
doc/en/: FAQ.md  design.md  index.md  schema.md
doc/en/schema/: default_value.md  field_name.md  field_type.md  member.md  members.md  struct.md  structs.md  type.md  types.md
doc/zh/: FAQ.md  design.md  index.md  schema.md
doc/zh/schema/: default_value.md  field_name.md  field_type.md  member.md  members.md  struct.md  structs.md  type.md  types.md
example/: CMakeLists.txt  README.md  sample.cpp  test.cpp
example/conf/: sample.json
example/include/: sample.h
generator/: slothjson.py
include/: slothjson.cpp  slothjson.h
res/: design.vsd
src/: main.cpp  perf_test.cpp  perf_test.h  perf_test.json  sample_test.cpp  sample_test.h  sample_test.json
vs2010/: slothjson.vcxproj  slothjson.vcxproj.filters
